fix: body overlap

--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -27,23 +27,22 @@
 @media only screen and (max-width: 600px) {
   @keyframes slideRight {
     from {
-      left: 100vw; /* Initial position, adjust as needed */
+      left: 100vw;
     }
     to {
-      left: 0; /* Final position, adjust as needed */
+      left: 0;
     }
   }
   @keyframes slideLeft {
     from {
-      left: 0; /* Initial position, adjust as needed */
+      left: 0;
     }
     to {
-      left: 100vw; /* Final position, adjust as needed */
+      left: 100vw;
     }
   }
 
   .menu {
-    position: absolute;
     width: 100vw;
     top: 0;
     left: 100vw;
